package br.com.redesocial.interfaces;

public interface Notificacao {
    void enviar();
    String getMensagem();
}
